theme changes (incomplete)

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -574,7 +574,7 @@ HeaderOffCommand=
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
 FooterY=SCREEN_BOTTOM
-FooterOnCommand=draworder,5;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;diffuse,color("#ffd400");
+FooterOnCommand=draworder,5;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;
 FooterOffCommand=
 
 ShowHelp=true
@@ -817,7 +817,7 @@ ScrollerY=SCREEN_CENTER_Y-60
 ScrollerOnCommand=SetFastCatchup,true;
 ScrollerOffCommand=decelerate,0.8;y,SCREEN_CENTER_Y;sleep,1.5;linear,0.1;zoomy,0
 #
-ShowBackgroundFrame=true
+ShowBackgroundFrame=false
 BackgroundFrameX=SCREEN_CENTER_X
 BackgroundFrameY=SCREEN_CENTER_Y-60
 BackgroundFrameOnCommand=diffuse,Color("Black");diffusealpha,0.7
@@ -1408,7 +1408,7 @@ SongMeterDisplayOffCommand=
 ShowSongTitle=not GAMESTATE:IsDemonstration();
 SongTitleX=SCREEN_CENTER_X
 SongTitleY=SCREEN_TOP+54
-SongTitleOnCommand=draworder,55;strokecolor,Color.Outline;shadowlength,1;basezoom,0.675;zoomy,0;sleep,1;smooth,0.5;zoom,1;
+SongTitleOnCommand=draworder,55;strokecolor,Color.Outline;shadowlength,1;basezoom,0.55;zoomy,0;sleep,1;smooth,0.5;zoom,1;
 SongTitleOffCommand=
 #
 SongMeterDisplayP1X=Center1Player() and SCREEN_CENTER_X or SCREEN_LEFT+16
