Update theme (Autogen, general annoynaces)

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -458,11 +458,11 @@ DescriptionSetCommand=%function(self,param) \
 	end; \
 end;
 #
-ShowAutogen=true
+ShowAutogen=false
 AutogenX=0
 AutogenY=0
 #AutogenOnCommand=diffuseshift;effectcolor1,Color.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
-AutogenOnCommand=blend,Blend.Add;diffuseshift;effectcolor1,color("#FFCC00FF");effectcolor2,color("#FFCC0088");
+AutogenOnCommand=zoom,0.75;
 #
 ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-64-8
@@ -1150,11 +1150,19 @@ DescriptionSetCommand=%function(self,param) \
 	end; \
 end;
 #
-ShowAutogen=false
-AutogenX=40-32
+ShowAutogen=true
+AutogenX=-132
 AutogenY=0
 AutogenOnCommand=
-AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
+AutogenSetCommand=%function(self,param) \
+	if param.Steps:IsAutogen() then \
+		self:finishtweening(); \
+	else \
+		self:finishtweening(); \
+	end \
+end;
+AutogenTweenOnCommand=finishtweening;decelerate,0.25;zoom,1;
+AutogenTweenOffCommand=finishtweening;bounceend,0.2;zoomx,8;zoomy,0
 #
 ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-20-32
