--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -458,11 +458,11 @@ DescriptionSetCommand=%function(self,param) \
 	end; \
 end;
 #
-ShowAutogen=false
+ShowAutogen=true
 AutogenX=0
 AutogenY=0
-#AutogenOnCommand=diffuseshift;effectcolor1,Color.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
-AutogenOnCommand=zoom,0.75;
+AutogenOnCommand=diffuseshift;effectcolor1,Color.Alpha( Color("Green") , 0.5 );effectcolor2,ColorMidTone( Color("Green") );
+#AutogenOnCommand=zoom,0.75;
 #
 ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-64-8
