--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1268,7 +1268,7 @@ ExplanationTogetherOffCommand=stoptweening
 [ScreenOptionsSimpleService]
 
 [ScreenOptionsService]
-ShowHeader=false
+ShowHeader=true
 
 LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,Theme,GraphicSound,Profiles,Network,UI,Advanced,Credits"
 LineTheme="gamecommand;screen,ScreenOptionsTheme;name,Theme Options"
