--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -632,7 +632,7 @@ PersistScreens="ScreenInit,ScreenTitleJoin,ScreenTitleMenu"
 
 [ScreenTitleMenu]
 ShowHeader=false
-ShowFooter=false
+ShowFooter=true
 #
 WrapScroller=false
 ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((28)*(itemIndex-(numItems-1)/2)); end;
@@ -648,30 +648,29 @@ LogoY=SCREEN_CENTER_Y-68
 LogoOnCommand=
 LogoOffCommand=
 #
-ShowCurrentGametype=true
-CurrentGametypeX=SCREEN_WIDTH*0.01
-CurrentGametypeY=SCREEN_HEIGHT*0.1575
-CurrentGametypeOnCommand=vertalign,bottom;
-CurrentGametypeOffCommand=linear,0.5;cropleft,1
-#
-ShowNumSongs=true
-NumSongsX=SCREEN_WIDTH*0.99
-NumSongsY=SCREEN_HEIGHT*0.1575+5
-NumSongsOnCommand=vertalign,bottom;horizalign,right;zoom,0.5;playcommand,"Set"
-NumSongsOffCommand=
-#
-#
 ShowTimingDifficulty=true
-TimingDifficultyX=SCREEN_LEFT+84
+TimingDifficultyX=SCREEN_LEFT+16
 TimingDifficultyY=SCREEN_TOP+22
 TimingDifficultyOnCommand=
 TimingDifficultyOffCommand=
 #
 ShowLifeDifficulty=true
-LifeDifficultyX=SCREEN_LEFT+84
-LifeDifficultyY=SCREEN_TOP+48
+LifeDifficultyX=SCREEN_LEFT+16
+LifeDifficultyY=SCREEN_TOP+44
 LifeDifficultyOnCommand=
 LifeDifficultyOffCommand=
+#
+ShowNumSongs=true
+NumSongsX=SCREEN_LEFT+16
+NumSongsY=SCREEN_TOP+68
+NumSongsOnCommand=vertalign,bottom;horizalign,left;zoom,0.5;shadowlength,1;playcommand,"Set"
+NumSongsOffCommand=
+ShowCurrentGametype=true
+#
+CurrentGametypeX=SCREEN_LEFT+16
+CurrentGametypeY=SCREEN_TOP+84
+CurrentGametypeOnCommand=vertalign,bottom;horizalign,left;zoom,0.5;shadowlength,1
+CurrentGametypeOffCommand=linear,0.5;cropleft,1
 #
 ShowSystemDirection=false
 SystemDirectionX=SCREEN_LEFT+40
@@ -680,18 +679,17 @@ SystemDirectionOnCommand=
 SystemDirectionOffCommand=
 #
 ShowVersionInfo=true
-VersionInfoX=SCREEN_RIGHT-90
-VersionInfoY=SCREEN_BOTTOM-64
+VersionInfoX=SCREEN_RIGHT-16
+VersionInfoY=SCREEN_TOP+24
 VersionInfoOnCommand=
 VersionInfoOffCommand=
 #
 ShowNetworkStatus=true
 NetworkStatusX=SCREEN_LEFT+12
-NetworkStatusY=SCREEN_HEIGHT*0.85
+NetworkStatusY=SCREEN_BOTTOM-64
 NetworkStatusOnCommand=halign,0;
 NetworkStatusOffCommand=linear,0.5;cropright,1
 #
-HelpY=SCREEN_BOTTOM-24
 #
 ChoiceNames="GameStart,Options,Edit,Jukebox,Exit"
 DefaultChoice="GameStart"
