--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1180,7 +1180,7 @@ ComboXOffsetOneSideP2=0
 JudgmentTransformCommand=%JudgmentTransformSharedCommand
 
 [Profile]
-ShowCoinData=true
+ShowCoinData=false
 UnlockAuthString=""
 
 [RadarValues]
