<@Jousway> I should just add my cdtitle resizer to sm5 default theme and piss the entire comunity off ;) <~freem> yes <~freem> didn't holo just say add it to default <&holo> do it up
in before everyone hates me haha

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1040,7 +1040,8 @@ CDTitleX=SCREEN_CENTER_X-160+90
 CDTitleY=SCREEN_TOP+160+(36/2)+8
 CDTitleFrontCommand=diffuse,color('0.5,0.5,0.5,1');cullmode,'CullMode_Front'
 CDTitleBackCommand=cullmode,'CullMode_Back'
-CDTitleOnCommand=draworder,106;shadowlength,1;zoom,0.75;diffusealpha,1;zoom,0;bounceend,0.35;zoom,0.75;spin;effectmagnitude,0,180,0;
+#CDTitleOnCommand=draworder,106;shadowlength,1;zoom,0.75;diffusealpha,1;zoom,0;bounceend,0.35;zoom,0.75;spin;effectmagnitude,0,180,0;
+CDTitleOnCommand=diffusealpha,0
 CDTitleOffCommand=bouncebegin,0.15;zoomx,0;
 #
 #
