--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -50,17 +50,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors;&quot;$(DXSDK_DIR)\include&quot;"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,WINDOWS,DEBUG,GLEW_STATIC"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="global.h"
-				PrecompiledHeaderFile="$(IntDir)/StepMania.pch"
-				AssemblerListingLocation="$(IntDir)\"
-				ObjectFile="$(IntDir)\"
-				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				BrowseInformation="0"
 				WarningLevel="4"
 				SuppressStartupBanner="true"
@@ -85,17 +81,17 @@
 				OutputFile="../Program/StepMania-debug.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
+				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;;&quot;$(DXSDK_DIR)\Lib\x86&quot;"
 				GenerateManifest="true"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib;msvcrt.lib"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(IntDir)/StepMania.pdb"
 				GenerateMapFile="true"
 				MapFileName="$(IntDir)\$(TargetName).map"
 				MapExports="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -158,7 +154,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors;&quot;$(DXSDK_DIR)\include&quot;"
 				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,WINDOWS,RELEASE,GLEW_STATIC"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -168,10 +164,6 @@
 				EnableFunctionLevelLinking="false"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="global.h"
-				PrecompiledHeaderFile="$(IntDir)/StepMania.pch"
-				AssemblerListingLocation="$(IntDir)\"
-				ObjectFile="$(IntDir)\"
-				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				BrowseInformation="0"
 				WarningLevel="4"
 				SuppressStartupBanner="true"
@@ -196,7 +188,7 @@
 				OutputFile="../Program/StepMania.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
+				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;;&quot;$(DXSDK_DIR)\Lib\x86&quot;"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib"
 				ProgramDatabaseFile="$(IntDir)/StepMania.pdb"
 				GenerateMapFile="true"
@@ -263,17 +255,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors;&quot;$(DXSDK_DIR)\include&quot;"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,WINDOWS,DEBUG,GLEW_STATIC"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="global.h"
-				PrecompiledHeaderFile="$(IntDir)/StepMania.pch"
-				AssemblerListingLocation="$(IntDir)\"
-				ObjectFile="$(IntDir)\"
-				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				BrowseInformation="0"
 				WarningLevel="4"
 				SuppressStartupBanner="true"
@@ -298,7 +286,7 @@
 				OutputFile="../Program/StepMania-fastdebug.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
+				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;;&quot;$(DXSDK_DIR)\Lib\x86&quot;"
 				GenerateManifest="true"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib;msvcrt.lib"
 				GenerateDebugInformation="true"
@@ -371,7 +359,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;..\extern\ffmpeg\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis;Actors;&quot;$(DXSDK_DIR)\include&quot;"
 				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,WINDOWS,RELEASE,GLEW_STATIC"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -380,12 +368,8 @@
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
 				EnableEnhancedInstructionSet="2"
-				UsePrecompiledHeader="1"
+				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="global.h"
-				PrecompiledHeaderFile="$(IntDir)/StepMania-SSE2.pch"
-				AssemblerListingLocation="$(IntDir)\"
-				ObjectFile="$(IntDir)\"
-				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				BrowseInformation="0"
 				WarningLevel="4"
 				SuppressStartupBanner="true"
@@ -410,7 +394,7 @@
 				OutputFile="..\Program/StepMania-SSE2.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
+				AdditionalLibraryDirectories="..\extern\ffmpeg\lib\;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;;&quot;$(DXSDK_DIR)\Lib\x86&quot;"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib"
 				ProgramDatabaseFile="$(IntDir)/StepMania-SSE2.pdb"
 				GenerateMapFile="true"
