Add metric [Gameplay] UseInternalScoring. Turn it off to prevent the game from touching custom scoring stuff. It is by default on.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -572,6 +572,7 @@ MinScoreToMaintainCombo=ComboMaintain()
 MaxScoreToIncrementMissCombo='TapNoteScore_Miss'
 MineHitIncrementsMissCombo=false
 AvoidMineIncrementsCombo=false
+UseInternalScoring=true
 # When you hit it, you know.
 ToastyTriggersAt=250
 
