Fix up theme a little. Sorry about the head clobber. ~ [ScreenSelectMusic] Change CDTitle Display. ~ [ScreenSelectPlayMode] Change icons due to ActorFrame propagation. - [ScreenSelectPlayStyle] Remove couple, routine. These cause crashes. - [ScreenOptionsArcade] Remove Premium choice. Requests lang strings that don't exist.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -467,8 +467,8 @@ SortLevel5Color=color("0,1,0,1")
 # Custom system that lets you rename certain classes of difficulties to 
 # something else. Mostly for custom games and game emulation, PIU for example.
 
-Names="PumpHard,PumpFreestyle,PumpNightmare"
-#~ Names="PumpHard,PumpFreestyle,PumpNightmare,PumpHalfDoubleEasy,PumpHalfDoubleMedium,PumpHalfDoubleHard,PumpHalfDoubleExpert"
+#Names="PumpHard,PumpFreestyle,PumpNightmare"
+Names="PumpHard,PumpFreestyle,PumpNightmare,PumpHalfDoubleEasy,PumpHalfDoubleMedium,PumpHalfDoubleHard,PumpHalfDoubleExpert"
 # Dance Couple Beginner
 DanceCoupleBeginnerStepsType="StepsType_Dance_Couple"
 DanceCoupleBeginnerDifficulty="Difficulty_Beginner"
@@ -3001,7 +3001,7 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
 # stuff tied to arcade features
-LineNames="1,2,3,4,5,6"
+LineNames="1,2,3,5,6"
 Line1="conf,GetRankingName"
 Line2="conf,CoinMode"
 Line3="conf,SongsPerPlay"
