--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -567,13 +567,13 @@ ScreenOutDelay=0
 FOV=90
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
-HeaderY=SCREEN_TOP
+HeaderY=SCREEN_TOP-2
 HeaderOnCommand=draworder,5;
 HeaderOffCommand=
 
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
-FooterY=SCREEN_BOTTOM
+FooterY=SCREEN_BOTTOM+2
 FooterOnCommand=draworder,5;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;
 FooterOffCommand=
 
@@ -2218,9 +2218,9 @@ LogoY=SCREEN_CENTER_Y-28
 LogoOnCommand=bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.75
 LogoOffCommand=stopeffect;bouncebegin,0.35;rotationz,360;zoom,0
 
-VersionInfoX=SCREEN_CENTER_X+114
-VersionInfoY=SCREEN_CENTER_Y+44
-VersionInfoOnCommand=horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
+VersionInfoX=SCREEN_CENTER_X+110
+VersionInfoY=SCREEN_CENTER_Y+4
+VersionInfoOnCommand=horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,1;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
 ScrollerOnCommand=visible,false;
 ArcadeOverlay.TextY=SCREEN_BOTTOM-128
 
