Revert "And these..."
This reverts commit 5d5875904dacfd876096c7c0596eb28fc3c9d413.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1181,6 +1181,7 @@ ComboXOffsetOneSideP2=0
 JudgmentTransformCommand=%JudgmentTransformSharedCommand
 
 [Profile]
+ShowCoinData=true
 UnlockAuthString=""
 
 [RadarValues]
