Revert "Round 2-2 of this."
This reverts commit 0ae4183f7ba16647230d4680efea90f729fd8614.

--- a/Themes/_portKit-sm4/metrics.ini
+++ b/Themes/_portKit-sm4/metrics.ini
@@ -2250,6 +2250,27 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen=NextNetworkScreen()
 PrevScreen=NextNetworkScreen()
 
+[ScreenBookkeeping]
+Class="ScreenBookkeeping"
+Fallback="ScreenOptionsServiceChild"
+NextScreen="ScreenOptionsService"
+PrevScreen="ScreenOptionsService"
+HelpText=ScreenString("HelpTextBookkeeping")
+ShowSongPlays=true
+ShowLastDays=true
+ShowLastWeeks=true
+ShowDayOfWeek=true
+ShowHourOfDay=true
+AllTimeX=SCREEN_CENTER_X
+AllTimeY=110
+AllTimeOnCommand=zoom,0.7;diffuseshift;effectcolor1,color("0.5,0.5,0.5,1")
+TitleX=SCREEN_CENTER_X
+TitleY=140
+TitleOnCommand=zoom,0.8 
+DataX=0
+DataY=SCREEN_CENTER_Y+16
+DataOnCommand=
+
 [ScreenPackages]
 Class="ScreenPackages"
 PackagesBGY=SCREEN_CENTER_Y
