Fix ScreenJukebox when there are no matching steps
Also makes minor tweaks to the SetSong function and adds a SystemMessage to
display that no steps have been found.  When this happens, the ScreenJukebox
will return to its PrevScreen.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4463,6 +4463,7 @@ NumMisses=6
 Fallback="ScreenGameplay"
 Class="ScreenDemonstration"
 NextScreen=Branch.NoiseTrigger()
+PrevScreen=Branch.NoiseTrigger()
 StartScreen=Branch.TitleMenu()
 PlayMusic=false
 SecondsToShow=60
@@ -4516,6 +4517,7 @@ Line4="lua,OptionsRandomJukebox()"
 Class="ScreenJukebox"
 Fallback="ScreenGameplay"
 NextScreen="ScreenJukebox"
+PrevScreen="ScreenJukeboxMenu"
 StartScreen="ScreenTitleMenu"
 LightsMode="LightsMode_Demonstration"
 ShowCourseModifiersProbability=0
