Enable LTO switch for configure script and automake 1.14 fix

--- a/.hgignore
+++ b/.hgignore
@@ -60,7 +60,8 @@ src/libtomcrypt/Release-*
 src/libtommath/build-*
 src/libtommath/Release-*
 src/*.old
-src/.deps
+*/.deps
+*/.dirstamp
 src/*.a
 src/*.so
 GtkModule.so
