--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1197,12 +1197,7 @@ DescriptionSetCommand=%function(self,param) \
 		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
 		self:shadowcolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); \
 	end; \
-	self:finishtweening(); \
-	self:diffusealpha(0); \
-	self:addx(-4); \
-	self:smooth(0.125); \
-	self:addx(4); \
-	self:diffusealpha(1); \
+	(cmd(finishtweening;diffusealpha,0;addx,-4;smooth,0.125;addx,4;diffusealpha,1))(self); \
 end;
 #
 ShowAutogen=false
