fix Lua warning by removing redundant code

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1147,14 +1147,8 @@ ShowAutogen=true
 AutogenX=-132
 AutogenY=0
 AutogenOnCommand=
-AutogenSetCommand=%function(self,param) \
-	if param.Steps:IsAutogen() then \
-		self:finishtweening(); \
-	else \
-		self:finishtweening(); \
-	end \
-end;
-AutogenTweenOnCommand=finishtweening;decelerate,0.25;zoom,1;
+AutogenSetCommand=finishtweening
+AutogenTweenOnCommand=finishtweening;decelerate,0.25;zoom,1
 AutogenTweenOffCommand=finishtweening;bounceend,0.2;zoomx,8;zoomy,0
 #
 ShowStepsType=ThemePrefs.Get("AutoSetStyle")
