Update IRC channel

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1820,7 +1820,7 @@ ChoiceOnline="screen,ScreenNetworkOptions;text,Play Online"
 ChoiceGameSelect="screen,ScreenSelectGame;text,Select Game"
 ChoiceJukebox="screen,ScreenJukeboxMenu;text,Jukebox"
 ChoiceReportBug="urlnoexit,http://ssc.ajworld.net/sm-ssc/bugtracker/;text,Report Bug"
-ChoiceIRC="urlnoexit,http://chat.mibbit.com/?server=irc.badnik.net&channel=%23sm-ssc&nick=StepMania_player;text,Chat on IRC"
+ChoiceIRC="urlnoexit,http://chat.mibbit.com/?server=chat.freenode.net&channel=%23stepmania-devs&nick=StepMania_player;text,Chat on IRC"
 ChoiceSandbox="screen,ScreenTest;text,Sandbox"
 #
 AllowRepeatingInput=true
