Wire in new CustomSpeedMods implementation
Forgot this little bit earlier.  Whoops!

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1183,8 +1183,8 @@ JudgmentTransformCommand=%JudgmentTransformSharedCommand
 [Profile]
 ShowCoinData=true
 UnlockAuthString=""
-CustomLoadFunction=function(profile, dir) end
-CustomSaveFunction=function(profile, dir) end
+CustomLoadFunction=LoadProfileCustom
+CustomSaveFunction=SaveProfileCustom
 
 [RadarValues]
 WriteComplexValues=true
